--- a/_posts/2025-11-10-Return.md
+++ b/_posts/2025-11-10-Return.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: Return : Six Shots
+title: Return & Six Shots
 subtitle: Ramblings Again
 cover-img: "/assets/img/493120_rock-island-al9-revolver-01_hero_1200x800-1.jpg"
 tags: [personal, ramblings]
 comments: true
 ---
+
 It's been over 5 years since I last posted anything on my website. I made this website of mine when I graduated with my masters in 2020 which was peak COVID time. Today I'm back after leaving my job which I couldn't continue because of my H1b visa.
 
 I came across a post couple of years back which said that in life you have six shots and each shot lasts 5 years. Each shot is like a new chance at life. My previous work experience where I learnt a lot was the first shot and I have 5 more shots left spanning 25 years. The shot I take now will dictate my left for next 5 years.
