--- a/_posts/2025-11-10-Return.md
+++ b/_posts/2025-11-10-Return.md
@@ -9,7 +9,7 @@ comments: true
 
 It's been over 5 years since I last posted anything on my website. I made this website of mine when I graduated with my masters in 2020 which was peak COVID time. Today I'm back after leaving my job which I couldn't continue because of my H1b visa.
 
-I came across a post couple of years back which said that in life you have six shots and each shot lasts 5 years. Each shot is like a new chance at life. My previous work experience where I learnt a lot was the first shot and I have 5 more shots left spanning 25 years. The shot I take now will dictate my left for next 5 years.
+I came across a post couple of years back which said that in life you have six shots and each shot lasts 5 years. Each shot is like a new chance at life. My previous work experience where I learnt a lot was the first shot and I have 5 more shots left spanning 25 years. The shot I take now will dictate my life for next 5 years.
 
 Being on H1b visa in USA puts you in a weird spot. Everytime you leave or get laid off you have 60 days to find a new job. Given the uncertain nature of employment in tech these days due to AI you're in a constant state of pressure. This fear can inhibit you from achieving your dreams and true potential. Thankfully I am financially secure because of my savings and investments over the past 5 years. That makes it one less worry for me at this phase of my life. Given that I'm 30 years old now and already have the real world skills and knowledge required to sustain myself I have stopped worrying much and am focusing on personal improvement on various fronts be it tech, health and family.
 
